# GAP_SOLVER

./: CMakeLists.txt
src/: ADMMSolver.cpp  ADMMSolver.h  CGSolver.cpp  CGSolver.h  GAPBuilder.cpp  GAPBuilder.h  GDSolver.cpp  GDSolver.h  ILPSolver.cpp  ILPSolver.h  LPSolver.cpp  LPSolver.h  main.cpp
src/backup/: ADMMSolver.cpp  ADMMSolver.h  GDSolver.h
src/backup2/: ADMMSolver.cpp  ADMMSolver.h
test/: large.txt  large2.txt  matlab.txt  small.txt  small2.txt  small3.txt  small_original.txt
